add ansible playbook

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,12 +1,14 @@
 [defaults]
-inventory = inventory/hosts.yml
-roles_path = ./roles
+inventory = inventory/hosts.ini
+roles_path = roles
 host_key_checking = False
 remote_user = ec2-user
 private_key_file = ~/.ssh/cloud-devops-lab-2025-key.pem
 stdout_callback = yaml
-gathering = smart
-fact_caching = memory
+# gathering = smart
+# fact_caching = memory
+interpreter_python = auto_silent
+retry_files_enabled = False
 
 [ssh_connection]
 ssh_args = -o ControlMaster=auto -o ControlPersist=60s -o UserKnownHostsFile=/dev/null -o IdentitiesOnly=yes
